# the-scroll

./: .gitignore  Makefile  README.md  flake.nix  meson.build  readme.md
scripts/: setup.sh
src/: libgourou.cpp
utils/: Makefile  adept_activate.cpp
